euphony-dsp/src/snapshots/euphony_dsp__binary__Max.snap
---
source: euphony-dsp/src/binary.rs
expression: node
---
Node {
    name: "Max",
    module: [
        "binary",
    ],
    impl_path: "euphony_dsp::binary",
    id: 57,
    inputs: [
        Input {
            name: "rhs",
            id: 0,
            trigger: false,
            default: 0.0,
        },
        Input {
            name: "lhs",
            id: 1,
            trigger: false,
            default: 0.0,
        },
    ],
    docs: " Returns the maximum of the two numbers.\n\n Follows the IEEE-754 2008 semantics for maxNum, except for handling of signaling `NAN`s. This\n matches the behavior of libm’s fmax.\n",
}
