euphony-dsp/src/snapshots/euphony_dsp__binary__Min.snap
---
source: euphony-dsp/src/binary.rs
expression: node
---
Node {
    name: "Min",
    module: [
        "binary",
    ],
    impl_path: "euphony_dsp::binary",
    id: 58,
    inputs: [
        Input {
            name: "rhs",
            id: 0,
            trigger: false,
            default: 0.0,
        },
        Input {
            name: "lhs",
            id: 1,
            trigger: false,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: " Returns the minimum of the two numbers.\n\n Follows the IEEE-754 2008 semantics for minNum, except for handling of signaling `NAN`s. This\n matches the behavior of libm’s fmax.\n",
    fork: None,
}
