euphony-dsp/src/snapshots/euphony_dsp__binary__Mul.snap
---
source: euphony-dsp/src/binary.rs
expression: node
---
Node {
    name: "Mul",
    module: [
        "binary",
    ],
    impl_path: "euphony_dsp::binary",
    id: 59,
    inputs: [
        Input {
            name: "rhs",
            id: 0,
            trigger: false,
            default: 0.0,
        },
        Input {
            name: "lhs",
            id: 1,
            trigger: false,
            default: 0.0,
        },
    ],
    docs: " Multiplies two signals together\n",
}
