euphony-dsp/src/snapshots/euphony_dsp__binary__Powi.snap
---
source: euphony-dsp/src/binary.rs
assertion_line: 134
expression: node
---
Node {
    name: "Powi",
    module: [
        "binary",
    ],
    impl_path: "euphony_dsp::binary",
    id: 61,
    inputs: [
        Input {
            name: "rhs",
            id: 0,
            trigger: false,
            default: 0.0,
        },
        Input {
            name: "lhs",
            id: 1,
            trigger: false,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: " Raises a number to an integer power.\n\n Using this function is generally faster than using `powf`\n",
}
