euphony-dsp/src/snapshots/euphony_dsp__binary__Rem.snap
---
source: euphony-dsp/src/binary.rs
expression: node
---
Node {
    name: "Rem",
    module: [
        "binary",
    ],
    impl_path: "euphony_dsp::binary",
    id: 62,
    inputs: [
        Input {
            name: "rhs",
            id: 0,
            trigger: false,
            default: 0.0,
        },
        Input {
            name: "lhs",
            id: 1,
            trigger: false,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: " Returns the remainder of the left hand signal by the right\n",
    fork: None,
}
