euphony-dsp/src/snapshots/euphony_dsp__binary__Sub.snap
---
source: euphony-dsp/src/binary.rs
expression: node
---
Node {
    name: "Sub",
    module: [
        "binary",
    ],
    impl_path: "euphony_dsp::binary",
    id: 64,
    inputs: [
        Input {
            name: "rhs",
            id: 0,
            trigger: false,
            default: 0.0,
        },
        Input {
            name: "lhs",
            id: 1,
            trigger: false,
            default: 0.0,
        },
    ],
    docs: " Subtracts `rhs` from `lhs`\n",
}
